Updated header background loading issue in page.tpl.php Updated well heading colors in high contrast style

--- a/css/styles-contrast.css
+++ b/css/styles-contrast.css
@@ -298,16 +298,16 @@ a:focus {
 }
 
 /* line 78, ../sass/styles/_contrast-styles.scss */
-.well h2,
-.well h2 a,
-.well h2 a:hover,
-.well h2 a:focus {
+.well h2, .well h3, .well h4, .well h5, .well h6,
+.well h2 a, .well h3 a, .well h4 a, .well h5 a, .well h6 a,
+.well h2 a:hover, .well h3 a:hover, .well h4 a:hover, .well h5 a:hover, .well h6 a:hover,
+.well h2 a:focus, .well h3 a:focus, .well h4 a:focus, .well h5 a:focus, .well h6 a:focus {
   color: white;
 }
 
 /* line 82, ../sass/styles/_contrast-styles.scss */
-.well h2 a:hover,
-.well h2 a:focus {
+.well h2 a:hover, .well h3 a:hover, .well h4 a:hover, .well h5 a:hover, .well h6 a:hover,
+.well h2 a:focus, .well h3 a:focus, .well h4 a:focus, .well h5 a:focus, .well h6 a:focus {
   text-decoration: underline;
 }
 
